Changes for 1.0.9

- Move a user from one group to another when applying the configuration instead
  of deleting from one and adding to another the same user.
- Add the ability to specify options (ie: READ_ONLY) in assignments in scst.conf.
- Minor fix to readConfig() which wasn't fully allowing for empty groups.

Changes for 1.0.8

- Added the ability to specify options for -assigndev and -replacedev,
  mainly READ_ONLY for now.
- Updated module to accept more than one option for assignDeviceToGroup() and
  replaceDeviceInGroup().
- Incremented module version number and renamed module directory to reflect it.

Changes for 1.0.7

- Added -moveuser, -renamegroup and -ReplaceDev options and necessary -to argument.
- Fixed minor bug in new renameGroup() method in SCST::SCST.

Changes for 1.0.6

- Added -resyncdev option to work with the new SCST resync_size option.
- SCST.pm: Added resyncDevice()
- SCST.pm: General cleanup.

Changes for 1.0.5

- Fixed a removeDevice() case when using -ForceConfig.
- SCST.pm: Cosmetic changes to error messages - include the handler name.
- SCST.pm: Quote handlers, handler IOs, devices, users and groups in error messages.

Changes for 1.0.4

- Fixed a check in SCST::removeUser().
- Fixed enable/disable target and error produced.
- Minor cosmetic fixes.

Changes for 1.0.3

- Added patch from Witold Kowolik to allow for qla_isp enable/disable
  target mode. This is untested by me as I don't have one of these cards.

Changes for 1.0.2

- Simplified/fixed options parsing. Thanks to Witold Kowolik.
- Use cluck() instead of print in module.
- Added a new option REMOVABLE.
- Allow options to be specified lowercase.

Changes for 1.0.1

- Module install/uninstall added
- Added mapping NV -> NV_CACHE

Changes for 1.0.0

- Added a proper Makefile.PL to SCST::SCST so now we have a also a
  proper man page.
- Renamed Changes to ChangeLog
- Updated README to include instructions for installing the perl module.